--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,10 @@
 <div class="home-content">
   <div class="home-title">
     <h1>WYRCAN</h1>
-    <!-- <img src="/images/logo-wyrcan.png" /> -->
   </div>
   <div class="home-description">
     <p>
-      Are you a student wanting to enter in the labour market?<br>
-      Are you an employer looking for young talent?
-      <br>
-      <span>If the answer is YES Wyrcan is for you!</span>
+        Wyrcan is an APP dedicated to connecting employers with undiscovered talent
     </p>
   </div>
   <div class="home-auth">
