--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   </head>
   <body>
     <div class="main-wrapper">
       <header class="header-wrapper">
         <div class="header-logo">
           <a href="/jobs">
-            <img src="/images/lorem-logo.png" alt="Wyrcan Logo" />
+            <img src="/images/small-logo-wyrcan.png" alt="Wyrcan Logo" />
           </a>
         </div>
         <% if(user) { %>
