--- a/views/jobs/applied.ejs
+++ b/views/jobs/applied.ejs
@@ -7,7 +7,7 @@
 <h1>Applied Jobs</h1>
 <div class="job-list">
 <% appliedJobs.forEach((applied) => { %>
-<a href='/jobs/<%= applied._id%>/apply'>
+<!-- <a href='/jobs/<//%= applied._id%>/apply'> -->
 <div class="job-item">
     <div class="job-position">
     <h2>Position: <%= applied.position %></h2>
