--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -31,6 +31,6 @@
     </div>
   </form>
   <div>
-    <span>You already have an account? <a href="/auth/login">Log In</a></span>
+    <span>Do you have an account? <a href="/auth/login">Log In</a></span>
   </div>
 </div>
