--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -16,5 +16,5 @@
       <button class="btn-login">Log In</button>
     </div>
   </form>
-  <span>You don't have an account? <a href="/auth/signup">Sign Up</a></span>
+  <span>Don't have an account? <a href="/auth/signup">Sign Up</a></span>
 </div>
